# eclipse-os

./: .gitmodules  CMakeLists.txt  gm.cpp  io.h  license.md  logging.cpp  logging.h  necklace.cpp  necklace.h  necklace_code_c.ino  readme.md  states.cpp  states.h  todo.md  utils.cpp
src/: anim.h  gm.cpp  gm.h  io.cpp  io.h  jcolors.cpp  jcolors.h  jio.cpp  jio.h  jlogging.cpp  jlogging.h  jmath.h  logging.cpp  logging.h  necklace.cpp  necklace.h  states.cpp  states.h  utils.h
src/imgs/: amongus-dancing.h  campfire.h  catjam.h  cyberpunk.h  earth_128x128.h  eclipse.h  enchanted-forest.h  flicker-stars.h  gears.h  jke-art.h  kirby-32-transparency.h  kirby-64x64-transparency.h  kirby-64x64.h  kirby.h  mage-spell.h  matrix.h  one-ring.h  praise-man.h  ritual-fast.h  ritual.h  spellbook.h  squid-117.h  squid-transparent.h  squid.h  valentines3q.h
src/kits/: palettes.h  patterns.cpp  patterns.h
src/lib/eanim/: attribute_float.cpp  attribute_float.h  effects.cpp  effects.h  generator_float.cpp  generator_float.h  generator_hsv.cpp  generator_hsv.h  processor_float.cpp  processor_float.h
src/lib/ecore/: hsv.cpp  hsv.h  logging.cpp  logging.h  math.cpp  math.h  tickable.cpp  tickable.h  utils.cpp  utils.h
src/lib/eio/: button.cpp  button.h  hsv_strip.cpp  hsv_strip.h  screen_drawer.cpp  (+1 more)
src/patterns/: pattern-stacks.cpp  pattern-stacks.h
src/states/: state.cpp  state.h  state_base.cpp  state_base.h  state_datamine.cpp  state_datamine.h  state_diptoblack.cpp  state_diptoblack.h  state_drip.cpp  state_drip.h  state_generic.cpp  state_generic.h  states.cpp  states.h
(+53 files in other folders)
